--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera!</title>
+	<title>Assignment Solution for module 2</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
